--- a/assets/styles/shared.css
+++ b/assets/styles/shared.css
@@ -35,6 +35,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     -webkit-tap-highlight-color: transparent;
+    overflow-x: hidden;
 }
 
 a {
@@ -127,6 +128,11 @@ header {
         transform: translateY(0);
         opacity: 1;
     }
+}
+
+.nav-links {
+    display: flex;
+    align-items: center;
 }
 
 .nav-links a {
